# node

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
docs/: MULTI_INSTANCE_TESTING.md  TROUBLESHOOTING.md
examples/: config-bootstrap.toml  config-development.toml  config-high-performance.toml  config-worker.toml  orchestrator_demo.rs  submit_job.rs
schemas/: job.schema.json  manifest.schema.json  receipt.schema.json
src/: config.rs  error.rs  job_store.rs  lib.rs  main.rs  node.rs  query_handler.rs
src/distributed_orchestration/: affinity.rs  config.rs  consensus.rs  context_groups.rs  decision_router.rs  metrics.rs  mod.rs  network_integration.rs  p2p_adapter.rs  partition.rs  protocols.rs  rotation.rs  strategies.rs  threshold.rs  types.rs
src/executor/: mod.rs
src/inference/: mod.rs
src/monitoring/: metrics.rs  mod.rs
src/network/: mod.rs
src/node/: mod.rs
src/orchestration/: cache.rs  decision_validator.rs  error.rs  llm_backend.rs  metrics_aggregator.rs  mod.rs  natural_language.rs  orchestrator.rs  prompts.rs  training_collector.rs  types.rs
src/protocol/: crypto.rs  messages.rs  mod.rs  queries.rs  query_codec.rs  validation.rs  version.rs
src/resources/: mod.rs
tests/: distributed_orchestration_property_tests.rs  distributed_orchestration_tests.rs  integration_tests.rs  property_tests.rs
tests/integration/: e2e_tests.rs  mod.rs  multi_node.rs
tests/property/: bootstrap_tests.rs  config_tests.proptest-regressions  config_tests.rs  error_tests.rs  executor_tests.rs  inference_tests.proptest-regressions  inference_tests.rs  integration_tests.rs  mod.rs  monitoring_tests.rs  multiinstance_tests.rs  network_tests.proptest-regressions  network_tests.rs  node_tests.rs  protocol_tests.proptest-regressions  protocol_tests.rs  protocol_version_tests.rs  resources_tests.rs  status_metrics_tests.rs
